Separate fetch methods and initial testing implementation

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "homepage": "http://previews.aspirity.com/easydev",
   "dependencies": {
+    "@types/node-fetch": "^2.5.2",
+    "@types/react-redux": "^7.1.4",
+    "@types/redux": "^3.6.0",
     "bfj": "^6.1.1",
     "bootstrap": "^4.3.1",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
@@ -11,15 +14,17 @@
     "classnames": "^2.2.6",
     "dotenv": "^6.2.0",
     "dotenv-expand": "^4.2.0",
+    "eosjs": "^20.0.0",
     "file-loader": "^3.0.1",
     "fs-extra": "^7.0.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.3.1",
+    "jest": "^24.9.0",
     "jest-pnp-resolver": "^1.2.1",
     "jest-resolve": "^24.3.1",
     "mdi-react": "^5.3.0",
     "mini-css-extract-plugin": "^0.5.0",
+    "node-fetch": "^2.6.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "pnp-webpack-plugin": "^1.4.1",
     "postcss-flexbugs-fixes": "^4.1.0",
@@ -31,14 +36,17 @@
     "react-app-polyfill": "^0.2.2",
     "react-dev-utils": "6.0.3",
     "react-dom": "^16.8.4",
-    "react-redux": "^6.0.1",
+    "react-redux": "^7.1.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-smooth-scrollbar": "^8.0.6",
     "reactstrap": "^7.1.0",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
+    "redux-mock-store": "^1.5.3",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.10.0",
+    "ricardian-template-toolkit": "^0.2.0",
     "smooth-scrollbar": "^8.3.1",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.3",
@@ -46,11 +54,18 @@
   },
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "build": "node scripts/build.js && yarn build-test",
+    "test": "mocha \"src/tests/*.js\" --timeout 10000",
+    "flow": "flow",
+    "flow-coverage": "flow-coverage-report",
+    "flow:0": "flow; exit 0",
+    "prep": "rimraf prep && sucrase ./src/ -d ./prep --transforms imports,flow,jsx",
+    "build-test": "rimraf build/tests && sucrase ./src/tests -d ./build/tests --transforms imports"
   },
   "devDependencies": {
-    "@babel/core": "7.3.4",
+    "@babel/cli": "^7.6.2",
+    "@babel/core": "^7.6.2",
+    "@babel/preset-flow": "^7.0.0",
     "@svgr/webpack": "4.1.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
@@ -59,6 +74,8 @@
     "babel-plugin-named-asset-import": "^0.3.1",
     "babel-preset-react-app": "^7.0.2",
     "babel-runtime": "6.26.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
     "css-loader": "2.1.1",
     "eslint": "5.15.1",
     "eslint-config-airbnb": "^17.1.0",
@@ -68,9 +85,12 @@
     "eslint-plugin-import": "2.16.0",
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-react": "7.12.4",
+    "flow-bin": "^0.108.0",
+    "mocha": "^5.2.0",
     "node-sass": "^4.11.0",
     "react-hot-loader": "^4.8.0",
     "sass-loader": "7.1.0",
+    "sucrase": "^3.10.1",
     "webpack": "4.29.6",
     "webpack-dev-server": "3.2.1",
     "webpack-manifest-plugin": "2.0.4",
