--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eosjs": "^20.0.0",
     "file-loader": "^3.0.1",
     "fs-extra": "^7.0.1",
+    "html-react-parser": "^0.9.1",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
