--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "dependencies": {
     "@types/node-fetch": "^2.5.2",
     "@types/react-redux": "^7.1.4",
-    "@types/redux": "^3.6.0",
     "bfj": "^6.1.1",
     "bootstrap": "^4.3.1",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
@@ -23,7 +22,7 @@
     "jest": "^24.9.0",
     "jest-pnp-resolver": "^1.2.1",
     "jest-resolve": "^24.3.1",
-    "mdi-react": "^5.3.0",
+    "mdi-react": "^6.1.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-fetch": "^2.6.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
@@ -57,6 +56,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js && yarn build-test",
     "test": "mocha \"src/tests/*.js\" --timeout 10000",
+    "run-jest": "jest",
     "flow": "flow",
     "flow-coverage": "flow-coverage-report",
     "flow:0": "flow; exit 0",
@@ -66,11 +66,13 @@
   "devDependencies": {
     "@babel/cli": "^7.6.2",
     "@babel/core": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
     "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "@svgr/webpack": "4.1.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
-    "babel-jest": "24.3.1",
+    "babel-jest": "^24.9.0",
     "babel-loader": "8.0.5",
     "babel-plugin-named-asset-import": "^0.3.1",
     "babel-preset-react-app": "^7.0.2",
@@ -90,6 +92,7 @@
     "mocha": "^5.2.0",
     "node-sass": "^4.11.0",
     "react-hot-loader": "^4.8.0",
+    "react-test-renderer": "^16.10.2",
     "sass-loader": "7.1.0",
     "sucrase": "^3.10.1",
     "webpack": "4.29.6",
