--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@types/node-fetch": "^2.5.2",
     "@types/react-redux": "^7.1.4",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
     "bfj": "^6.1.1",
     "bootstrap": "^4.3.1",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
@@ -89,7 +91,7 @@
     "eslint-plugin-import": "2.16.0",
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-react": "7.12.4",
-    "flow-bin": "^0.108.0",
+    "flow-bin": "^0.109.0",
     "mocha": "^5.2.0",
     "node-sass": "^4.11.0",
     "react-hot-loader": "^4.8.0",
