--- a/package.json
+++ b/package.json
@@ -57,13 +57,12 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js && yarn build-test",
-    "test": "mocha \"src/tests/*.js\" --timeout 10000",
+    "test": "yarn prep && mocha \"prep/tests/mocha/*.js\" --timeout 10000 && yarn run-jest",
     "run-jest": "jest",
     "flow": "flow",
     "flow-coverage": "flow-coverage-report",
     "flow:0": "flow; exit 0",
-    "prep": "rimraf prep && sucrase ./src/ -d ./prep --transforms imports,flow,jsx",
-    "build-test": "rimraf build/tests && sucrase ./src/tests -d ./build/tests --transforms imports,jsx,flow",
+    "prep": "rimraf prep && sucrase ./src/ -d ./prep --transforms jsx,imports,flow",
     "precommit": "yarn flow && yarn test"
   },
   "devDependencies": {
